--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "salon-frontend",
+  "name": "frontend",
+  "homepage": "https://beenn56.github.io/frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
